--- a/paper/jalangi.bib
+++ b/paper/jalangi.bib
@@ -1,3 +1,12 @@
+@inproceedings{SBGKfse13,
+    author={Koushik Sen and Tasneem Brutch and Simon Gibbs and Swaroop Kalasapur},
+    title={Jalangi: A Selective Record-Replay and Dynamic Analysis Framework for JavaScript},
+    booktitle= {ESEC/FSE'13},
+    month = {August},
+    year= 2013,
+    note = {To appear}
+}
+
 @inproceedings{Mickens:2010:MDC:1855711.1855722,
  author = {Mickens, James and Elson, Jeremy and Howell, Jon},
  title = {Mugshot: deterministic capture and replay for Javascript applications},
