--- a/paper/jalangi-tool.tex
+++ b/paper/jalangi-tool.tex
@@ -70,10 +70,10 @@ Koushik Sen\titlenote{The work of this author was supported in full by
       \affaddr{UC Berkeley, CA, USA.}\\
      \affaddr{{\tt\small ksen@cs.berkeley.edu}}
 \alignauthor
-Tasneem Brutch,  Simon Gibbs, and  Swaroop Kalasapur\\
+Swaroop Kalasapur, Tasneem Brutch,  and Simon Gibbs\\
 \affaddr{Samsung Research America}\\
 \affaddr{75 West Plumeria Drive, San Jose, CA, USA}\\
-\affaddr{{\tt\small \{t.brutch,s.gibbs,s.kalasapur\}@sisa.samsung.com}}
+\affaddr{{\tt\small \{s.kalasapur,t.brutch,s.gibbs\}@sisa.samsung.com}}
 }
 % 2nd. author
 \maketitle
