--- a/paper/jalangi.bib
+++ b/paper/jalangi.bib
@@ -1,5 +1,5 @@
 @inproceedings{SBGKfse13,
-    author={Koushik Sen and Tasneem Brutch and Simon Gibbs and Swaroop Kalasapur},
+    author={Koushik Sen and Swaroop Kalasapur and Tasneem Brutch and Simon Gibbs},
     title={Jalangi: A Selective Record-Replay and Dynamic Analysis Framework for JavaScript},
     booktitle= {ESEC/FSE'13},
     month = {August},
